--- a/css/agency.css
+++ b/css/agency.css
@@ -174,18 +174,18 @@ fieldset[disabled] .btn-xl.active {
   border-color: #fed136;
 }
 .navbar-default .navbar-toggle .icon-bar {
-  background-color: white;
+  background-color: black;
 }
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
   background-color: #fed136;
 }
 .navbar-default .nav li a {
-  font-family: "Martel Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   font-weight: 400;
   letter-spacing: 1px;
-  color: white;
+  color: black;
 }
 .navbar-default .nav li a:hover,
 .navbar-default .nav li a:focus {
@@ -220,8 +220,9 @@ fieldset[disabled] .btn-xl.active {
   .navbar-default .navbar-nav > .active > a {
     border-radius: 3px;
   }
+  /*acción del navbar cuando uno scrollea entonces se cambia de color, coordinar con el BG*/
   .navbar-default.navbar-shrink {
-    background-color: #222222;
+    background-color: white;
     padding: 10px 0;
   }
   .navbar-default.navbar-shrink .navbar-brand {
@@ -231,7 +232,7 @@ fieldset[disabled] .btn-xl.active {
 
 /* -------HEADER--------------------------HEADER------------------HEADER----------*/
 header {
-  background-image: url('../img/header-bg.jpg');
+  background-image: url('../img/header-bg4.jpg');
   background-repeat: none;
   background-attachment: scroll;
   background-position: center center;
@@ -240,7 +241,7 @@ header {
   background-size: cover;
   -o-background-size: cover;
   text-align: center;
-  color: white;
+  color: black;
 }
 header .intro-text {
   padding-top: 100px;
