--- a/css/agency.css
+++ b/css/agency.css
@@ -15,7 +15,7 @@ body {
   color: #777777;
 }
 .text-primary {
-  color: #fed136;
+  color: #e8d700;
 }
 p {
   font-size: 14px;
@@ -32,7 +32,7 @@ a.active {
   outline: none;
 }
 a {
-  color: #fed136;
+  color: #e8d700;
 }
 a:hover,
 a:focus,
@@ -66,7 +66,7 @@ h6 {
 }
 .btn-primary {
   color: black;
-  background-color: #fed136;
+  background-color: #e8d700;
   border-color: white;
   font-family: 'Raleway', sans-serif;
   text-transform: uppercase;
@@ -81,6 +81,7 @@ h6 {
   background-color: #fec503;
   border-color: #f6bf01;
 }
+
 .btn-primary:active,
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary {
@@ -101,17 +102,17 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-  background-color: #fed136;
-  border-color: #fed136;
+  background-color: #e8d700;
+  border-color: #e8d700;
 }
 .btn-primary .badge {
-  color: #fed136;
+  color: #e8d700;
   background-color: #ffffff;
 }
 .btn-xl {
-  color: #ffffff;
-  background-color: #fed136;
-  border-color: #fed136;
+  color: white;
+  background-color: #e8d700;
+  /*border-color: #e8d700;*/
   font-family: 'Raleway', sans-serif;
   text-transform: lowercase;
   font-weight: 700;
@@ -148,11 +149,11 @@ fieldset[disabled] .btn-xl:active,
 .btn-xl.disabled.active,
 .btn-xl[disabled].active,
 fieldset[disabled] .btn-xl.active {
-  background-color: #fed136;
-  border-color: #fed136;
+  background-color: #e8d700;
+  border-color: #e8d700;
 }
 .btn-xl .badge {
-  color: #fed136;
+  color: #e8d700;
   background-color: #ffffff;
 }
 .navbar-default {
@@ -160,7 +161,7 @@ fieldset[disabled] .btn-xl.active {
   border-color: transparent;
 }
 .navbar-default .navbar-brand {
-  color: #fed136;
+  color: #e8d700;
   font-family: 'Raleway', sans-serif;
 }
 .navbar-default .navbar-brand:hover,
@@ -173,15 +174,15 @@ fieldset[disabled] .btn-xl.active {
   border-color: rgba(255, 255, 255, 0.02);
 }
 .navbar-default .navbar-toggle {
-  background-color: #fed136;
-  border-color: #fed136;
+  background-color: #e8d700;
+  border-color: #e8d700;
 }
 .navbar-default .navbar-toggle .icon-bar {
   background-color: black;
 }
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
-  background-color: #fed136;
+  background-color: #e8d700;
 }
 
 /*color de los titles del navbar (portofolio, about, etc) en el landing page*/
@@ -195,18 +196,18 @@ fieldset[disabled] .btn-xl.active {
 }
 .navbar-default .nav li a:hover,
 .navbar-default .nav li a:focus {
-  color: #fed136;
+  color: #e8d700;
   outline: none;
 }
 .navbar-default .navbar-nav > .active > a {
   border-radius: 0;
-  color: #fed136;
+  color: #e8d700;
   background-color: black;
 }
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
   color: black;
-  background-color: #fec503;
+  background-color: #e8d700;
 }
 @media (min-width: 768px) {
   .navbar-default {
@@ -216,6 +217,7 @@ fieldset[disabled] .btn-xl.active {
     -moz-transition: padding 0.3s;
     transition: padding 0.3s;
     border: none;
+    color: black;
   }
   .navbar-default .navbar-brand {
     font-size: 2em;
@@ -623,7 +625,7 @@ section#contact .form-group textarea.form-control {
   height: 236px;
 }
 section#contact .form-control:focus {
-  border-color: #fed136;
+  border-color: #e8d700;
   box-shadow: none;
 }
 section#contact ::-webkit-input-placeholder {
@@ -692,7 +694,7 @@ ul.social-buttons li a {
 ul.social-buttons li a:hover,
 ul.social-buttons li a:focus,
 ul.social-buttons li a:active {
-  background-color: #fed136;
+  background-color: #e8d700;
 }
 .btn:focus,
 .btn:active,
@@ -771,11 +773,11 @@ ul.social-buttons li a:active {
 }
 ::-moz-selection {
   text-shadow: none;
-  background: #fed136;
+  background: #e8d700;
 }
 ::selection {
   text-shadow: none;
-  background: #fed136;
+  background: #e8d700;
 }
 img::selection {
   background: transparent;
@@ -784,5 +786,5 @@ img::-moz-selection {
   background: transparent;
 }
 body {
-  webkit-tap-highlight-color: #fed136;
+  webkit-tap-highlight-color: #e8d700;
 }
