--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6534,7 +6534,7 @@ button.close {
 .invisible {
   visibility: hidden;
 }
-.text-hide {
+.xt-hide {
   font: 0/0 a;
   color: transparent;
   text-shadow: none;
