change of image

--- a/css/agency.css
+++ b/css/agency.css
@@ -248,7 +248,7 @@ fieldset[disabled] .btn-xl.active {
 
 /* -------HEADER--------------------------HEADER------------------HEADER----------*/
 header {
-  /*background-image: url('../img/header-bg4.jpg');*/
+  background-image: url('https://github.com/MarceAmsa/marceamsa.github.io/blob/master/img/header_dualcolor.jpg?raw=true');
   background-repeat: none;
   background-attachment: scroll;
   background-position: center center;
